# lscma

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: .buildinfo  conf.py  index.html  index.rst  objects.inv  py-modindex.html  search.html
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/_autosummary/: lscma.analysis.doctree  lscma.classification.doctree  lscma.doctree  lscma.io.czi_io.doctree  lscma.io.doctree  lscma.io.nx_io.doctree  lscma.io.pd_io.doctree  lscma.io.zarr_io.doctree  lscma.segmentation.doctree  lscma.utils.doctree  lscma.utils.file_utils.doctree  lscma.visualization.doctree  lscma.visualization.napari_visualizer.doctree
docs/_autosummary/: lscma.analysis.rst  lscma.html  lscma.io.zarr_io.rst  lscma.utils.file_utils.html  lscma.visualization.html  lscma.visualization.napari_visualizer.html  lscma.visualization.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  objects.inv  py-modindex.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_sources/_autosummary/: lscma.io.rst.txt  lscma.rst.txt  lscma.segmentation.rst.txt  lscma.utils.rst.txt  (+1 more)
docs/source/: lscma.analysis.rst  lscma.classification.rst  lscma.io.rst  lscma.rst  lscma.segmentation.rst  lscma.utils.rst  lscma.visualization.rst  modules.rst
sphinx/: index.rst
sphinx/_autosummary/: lscma.classification.rst  lscma.io.czi_io.rst  lscma.io.pd_io.rst  lscma.visualization.napari_visualizer.rst  lscma.visualization.rst
src/lscma/: __init__.py
tests/: test_io.py
(+41 files in other folders)
